Fix MultipleScopeBarItem (source dropdown on Console tab)

--- a/src/injectedCode/AdditionalStyle.css
+++ b/src/injectedCode/AdditionalStyle.css
@@ -2,3 +2,23 @@
 .navigation-bar .item.button > img {
     width: 16px;
 }
+
+/*
+Fix the "Source" dropdown on the Console tab not being clickable.
+We overlay the select element on top of the styled text so that the dropdown shows when the text is clicked.
+Problem comes from here:
+https://github.com/WebKit/WebKit/blob/d21ca2c6897eafb4a8a19561b1d82f242240af9f/Source/WebInspectorUI/UserInterface/Views/ScopeBar.css#L92-L101
+*/
+.scope-bar > li.multiple > select {
+    width: auto;
+    height: auto;
+
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    opacity: 0;
+
+    pointer-events: auto;
+}
